Styles: Margin fixed on header buttons, emojis in the light/dark mode selector.

--- a/myproject/static/styles/addContact.css
+++ b/myproject/static/styles/addContact.css
@@ -40,7 +40,8 @@ body {
 .btn {
     display: inline-block;
     text-decoration: none;
-    padding: 14px 28px;
+    padding: 15px 28px;
+    margin-right: 20px;
     border-radius: 30px;
     background: rgba(255, 71, 126, 0.9);
     color: #fff;
@@ -54,7 +55,7 @@ button {
     display: inline-block;
     text-decoration: none;
     padding: 14px 28px;
-    border-radius: 30px;
+    border-radius: 20px;
     color: #fff;
     font-weight: bold;
     transition: 0.3s;
