--- a/myproject/static/styles/addressBook.css
+++ b/myproject/static/styles/addressBook.css
@@ -114,14 +114,18 @@ a {
     transform: translateY(-3px);
 }
 .logout {
-    padding: 10px;
     background-color: #f44336;
     color: white;
     border: none;
     cursor: pointer;
+    margin-right: 20px;
 }
 .logout:hover {
     background-color: #d32f2f;
+}
+
+.settings {
+    margin-left: 50px
 }
 
 .sort {
